Fix   grammar Add  process at the end of the grammar, for helping the generation of correct scenario